[tool.poetry]
name = "confidential"
version = "2.3.0"
description = "Manage secrets in your projects using AWS Secrets Manager"
authors = [
    "Daniel van Flymen <dvf@candidco.com>",
    "Elliott Chartock <elliott.chartock@candidco.com>",
    "Vageli Mouzakitis <vageli.mouzakitis@candidco.com>",
]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pytest = "^3.0"
pytest-mock = "^1.10"
moto = "^1.3"

[tool.poetry.plugins."console_scripts"]
"confidential" = "confidential.secrets_manager:decrypt_secret"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
