[tool.poetry]
name = "confidential"
version = "2.6.1"
description = "Manage secrets in your projects using AWS Secrets Manager"
authors = [
    "Daniel van Flymen <dvf@candidco.com>",
    "Elliott Chartock <elliott.chartock@candidco.com>",
    "Vageli Mouzakitis <vageli.mouzakitis@candidco.com>",
    "Diaphel Thompson <diaphel@candidco.com>",
    "Tacio Rocha <tacio.rocha@candidco.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
boto3 = "^1.7"
click = "8.1.7"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pytest = "6.2.5"
pytest-mock = "^1.10"
moto = "^3.1.18"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."console_scripts"]
"confidential" = "confidential.secrets_manager:decrypt_secret"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
)/
'''
